# DocImg-Translate

./: .env.example  .gitignore  Deployment.md  README.md  mlruns.db  pyproject.toml  system_development.txt
data/06f5d997-d4ce-492c-b7a5-7110cd6c687a/: b0bd3516-4e72-4345-9028-92f1ab0bd441_content_list.json  b0bd3516-4e72-4345-9028-92f1ab0bd441_content_list_v2.json  b0bd3516-4e72-4345-9028-92f1ab0bd441_model.json  full.md  layout.json
output_test/: api_result_2503.23344v1.json
output_test/957775a3-7aa9-46aa-a8c3-6017ff6ec536/: 1fe4b827-34d4-4f76-a343-81e3da8727b2_content_list.json  1fe4b827-34d4-4f76-a343-81e3da8727b2_model.json  content_list_v2.json  full.md  layout.json
src/: bilingual_mapping.py
src/backend/: agent.py  api.py  database.py  dedup_cache.py  evaluation.py  mineru_client.py  mongo_store.py  nllb_service.py  pdf_renderer.py
src/frontend/: app.py
src/test/: test_mineru.py  test_render.py  test_render_idea.md  test_render_v2.py  test_render_v3.py
